aks/manifests/uat/backend/notifications-microservice-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-microservice-deployment
  labels:
    app: notifications-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-microservice
  template:
    metadata:
      labels:
        app: notifications-microservice
    spec:
      containers:
      - name: notifications-microservice
        image: microservicesdemoregistry.azurecr.io/notifications-microservice:$(tag)
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-microservice-service
  labels:
    app: notifications-microservice
spec:
  selector:
    app: notifications-microservice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
